--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 :root {
-  --primary: #fff;
-  --secondary: #000;
+  --primary: #1A120B;
+  --secondary: #D5CEA3;
   --black: #000;
-  --blue-gradient: linear-gradient(97.05deg, #4066ff 3.76%, #2949c6 100%);
-  --orange-gradient: linear-gradient(270deg, #ffb978 0%, #ff922d 100%);
+  --blue-gradient: linear-gradient(97.05deg, #3C2A21 3.76%, #1A120B 100%);
+  --orange-gradient: linear-gradient(270deg, #E5E5CB 0%, #D5CEA3 100%);
   --blue: #4066ff;
   --lightBlue: #eeeeff;
-  --shadow: 0px 23px 21px -8px rgba(136, 160, 255, 0.25);
+  --shadow: 0px 100px 80px rgba(0, 0, 0, 0.07), 0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198), 0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275), 0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035), 0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725), 0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
 }
 
 * {
@@ -15,6 +15,10 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
+}
+
+body {
+  background: #E5E5CB;
 }
 
 a {
