--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -117,6 +117,35 @@ a {
   transform: scale(1.1);
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Sulphur Point', sans-serif;
+}
+
+h1 {
+  font-size: 7.5rem;
+}
+
+h2 {
+  font-size: 7rem;
+}
+
+h3 {
+  font-size: 6.5rem;
+}
+
+h4 {
+  font-size: 6rem;
+}
+
+h5 {
+  font-size: 5.5rem;
+}
+
+h6 {
+  font-size: 3rem;
+}
+
+
 @media (min-width: 1536px) {
   .innerWidth {
     max-width: 1280px;
@@ -142,5 +171,28 @@ a {
   }
   .orangeText {
     font-size: 1.2rem;
+  }
+  h1 {
+    font-size: 6rem;
+  }
+  
+  h2 {
+    font-size: 5rem;
+  }
+  
+  h3 {
+    font-size: 4rem;
+  }
+  
+  h4 {
+    font-size: 3.5rem;
+  }
+  
+  h5 {
+    font-size: 2.5rem;
+  }
+  
+  h6 {
+    font-size: 2rem;
   }
 }
