--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,4 +1,22 @@
+.n-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon {
+  align-self: flex-end;
+}
+
+.n-container {
+  width: 75%;
+}
+
 .n-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 5rem;
   padding: 1.5rem 4rem;
   font-size: 1.25rem;
@@ -32,37 +50,39 @@ li:hover::after {
   width: 100%;
 }
 
+@media (max-width: 1020px) {
+  .n-wrapper {
+    justify-content: flex-end;
+    align-items: center;
+  }
 
+  .n-list {
+    display: none;
+  }
 
+  .mobile {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    z-index: 90;
+    border: none;
+    border-radius: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+  }
 
-
-
-
-
-
-
-/* li {
-  display: inline-block;
-  position: relative;
 }
 
-li::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 0;
-  height: 2px;
-  background: #000;
-  transition: width 0.3s ease;
+@media (min-width: 1024px) {
+  .icon {
+    display: none;
+  }
+
+  .n-close {
+    display: none;
+  }
 }
-
-li:hover::after {
-  width: 100%;
-} */
-
-/* li:hover {
-  cursor: pointer;
-  font-weight: 700;
-  transform: scale(1.1);
-} */
