--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -44,6 +44,11 @@
   flex: 6;
   justify-content: start;
   margin-bottom: 0.75rem;
+  margin-top: 0.75rem;
+}
+
+.p-features h6 svg {
+  margin-inline: 1rem;
 }
 
 .p-image {
