--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -65,19 +65,29 @@ li:hover::after {
   }
 
   .mobile {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
-    margin: auto;
+    min-height: 100vh;
+    max-height: 100vh;
     z-index: 90;
     border: none;
     border-radius: 0;
-    display: flex;
-    flex-direction: column;
-    padding: 0;
+    padding-top: 5rem;
     transition: all 0.5 ease-in-out;
+  }
+
+  .n-wrapper .up-btn {
+    position: fixed;
+    bottom: 1rem;
+    right: 1.5rem;
+    cursor: pointer;
+    z-index: 89;
+    color: var(--primary);
   }
 
 }
